# mini_jvm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  mini_java.cpp  mini_javap.cpp
cmake_plugins/: CompilerInfo.cmake
include/jvm/: AccessFlags.h  Annotation.h  Attribute.h  AttributeVisitor.h  ClassAttribute.h  ClassFile.h  ClassParser.h  ClassReader.h  ClassVisitor.h  ClassWriter.h  Common.h  ConstantInfoVisitor.h  ConstantPool.h  Exception.h  Field.h  Launcher.h  Method.h  MiniVM.h  StringAttrVisitor.h  StringInfoVisitor.h
include/jvm/classfile/: AccessFlags.h  ClassFile.h  ClassLoader.h  ClassReader.h
include/jvm/interpreter/: Interpreter.h
include/jvm/memory/: Allocation.h
include/jvm/native/: JavaLangObject.h  JavaLangString.h
include/jvm/runtime/: ConstantPool.h  ConstantPool2.h  JvmClass.h  JvmFrame.h  JvmHeap.h  JvmMethodArea.h  JvmStack.h  JvmThread.h  JvmType.h
include/jvm/utils/: FileIo.h
src/: AccessFlags.cpp  Annotation.cpp  Attribute.cpp  CMakeLists.txt  ClassAttribute.cpp  ClassFile.cpp  ClassParser.cpp  ClassReader.cpp  ClassWriter.cpp  Common.cpp  ConstantPool.cpp  Exception.cpp  Field.cpp  Launcher.cpp  Method.cpp  MiniVM.cpp  StringAttrVisitor.cpp  StringInfoVisitor.cpp
src/classfile/: AccessFlags.cpp  ClassFile.cpp  ClassLoader.cpp  ClassReader.cpp
src/interpreter/: Interpreter.cpp
src/memory/: Allocation.cpp
src/runtime/: ConstantPool.cpp  JvmClass.cpp  JvmThread.cpp  JvmType.cpp
test/: CMakeLists.txt  ClassFileTest.cpp  TestConfig.h.in
